development/web/deployment.yaml
---
# Source: deployment/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-client-svc
  labels:
    helm.sh/chart: deployment-0.1.0
    app.kubernetes.io/name: web-client-svc
    app.kubernetes.io/instance: web-deployment
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-client-svc
      app.kubernetes.io/instance: web-deployment
  template:
    metadata:
      labels:
        helm.sh/chart: deployment-0.1.0
        app.kubernetes.io/name: web-client-svc
        app.kubernetes.io/instance: web-deployment
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        {}
      containers:
        - name: web-client-svc
          securityContext:
            {}
          image: "ewr.vultrcr.com/polytlk/web-client:sha-ec96a6c"
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/ssl
              name: nginx-tls
              readOnly: true
      volumes:
        - name: nginx-tls
          secret:
            secretName: nginx-tls
